--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -21,9 +21,14 @@
 					<li class="nav-item">
 					    <a class="nav-link" href="">Shipping &amp; Delivery</a>
 					</li>
-					<li class="nav-item">
-					    <a class="nav-link" th:href="@{/login}">Login</a>
-					</li>
+					
+					<!-- khi customer đã được xác thực(đã login) -> không hiển thị Login nữa -->
+					<th:block sec:authorize="!isAuthenticated()"> 
+						<li class="nav-item">
+						    <a class="nav-link" th:href="@{/login}">Login</a>
+						</li>
+					</th:block>
+					
 					<li class="nav-item">
 					    <a class="nav-link" th:href="@{/register}">Register</a>
 					</li>
@@ -72,7 +77,7 @@
 						</li>
 																					
 						<li class="nav-item">
-							<a class="nav-link" href="">Orders</a>
+							<a class="nav-link" th:href="@{/orders}">Orders</a>
 						</li>
 						
 						<li class="nav-item">
